gl33-master/src/test/deca/context/invalid/other/affectation_void_int.deca
// Invalid test
// Affectation d'un void à un int

{
   int n;
   void v;

   n = v;
}
